# arctis-nova-mixer

./: Cargo.toml  Makefile  README.md
extra/linux/: 99-usb-arctis-nova.rules
src/: main.rs
src/mixer/: mod.rs  windows.rs
src/winmixer/: mod.rs
