[package]
name = "arctis-nova-mixer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
lazy_static = "1.4.0"

[dependencies.hidapi]
version = "1.4.2"
default-features = false
features = ["linux-shared-hidraw"]

[dependencies.windows]
version = "0.39.0"
features = [
    "Foundation_Collections",
    "System_Diagnostics",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
]
